--- a/tests/fixtures/after_test_page.html
+++ b/tests/fixtures/after_test_page.html
@@ -193,7 +193,7 @@
     </div>
    </div>
   </div>
-  <script async="" src="knopka-ush-ru_files/knopka-ush.ru">
+  <script async="" src="knopka-ush-ru_files/knopka-ush-ru.html">
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
